// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          地址
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left: 0px;"
                          />
                          <button
                            aria-label="Expand row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                          John Brown sr.
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          60
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          New York No. 1 Lake Park
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left: 0px;"
                          />
                          <button
                            aria-label="Expand row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          Joe Black
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          32
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          Sidney No. 1 Lake Park
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"name":"John Brown sr.","age":60,"address":"New York No. 1 Lake Park","items":[{"name":"John Brown","age":42,"address":"New York No. 2 Lake Park"},{"name":"John Brown jr.","age":30,"address":"New York No. 3 Lake Park","items":[{"name":"Jimmy Brown","age":16,"address":"New York No. 3 Lake Park"}]},{"name":"Jim Green sr.","age":72,"address":"London No. 1 Lake Park","items":[{"name":"Jim Green","age":42,"address":"London No. 2 Lake Park","items":[{"name":"Jim Green jr.","age":25,"address":"London No. 3 Lake Park"},{"name":"Jimmy Green sr.","age":18,"address":"London No. 4 Lake Park"}]}]}],"_expanded":false},{"name":"Joe Black","age":32,"address":"Sidney No. 1 Lake Park","_expanded":false}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Edit 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-bordered"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          序号
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          地址
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left: 0px;"
                          />
                          <button
                            aria-label="Collapse row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-expanded"
                            type="button"
                          />
                          1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="John Brown sr."
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="60"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="New York No. 1 Lake Park"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              <span />
                               添加子项
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-up"
                                class="anticon anticon-arrow-up"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-down"
                                class="anticon anticon-arrow-down"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="delete"
                                class="anticon anticon-delete"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="delete"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-1"
                        data-row-key="0.items.0"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-1"
                            style="padding-left: 25px;"
                          />
                          <button
                            aria-label="Collapse row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          1-1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="John Brown"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="42"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="New York No. 2 Lake Park"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              <span />
                               添加子项
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-up"
                                class="anticon anticon-arrow-up"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-down"
                                class="anticon anticon-arrow-down"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="delete"
                                class="anticon anticon-delete"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="delete"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-1"
                        data-row-key="0.items.1"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-1"
                            style="padding-left: 25px;"
                          />
                          <button
                            aria-label="Collapse row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-expanded"
                            type="button"
                          />
                          1-2
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="John Brown jr."
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="30"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="New York No. 3 Lake Park"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              <span />
                               添加子项
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-up"
                                class="anticon anticon-arrow-up"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-down"
                                class="anticon anticon-arrow-down"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="delete"
                                class="anticon anticon-delete"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="delete"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-2"
                        data-row-key="0.items.1.items.0"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-2"
                            style="padding-left: 50px;"
                          />
                          <button
                            aria-label="Collapse row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          1-2-1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="Jimmy Brown"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="16"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="New York No. 3 Lake Park"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              <span />
                               添加子项
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-up"
                                class="anticon anticon-arrow-up"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-down"
                                class="anticon anticon-arrow-down"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="delete"
                                class="anticon anticon-delete"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="delete"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-1"
                        data-row-key="0.items.2"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-1"
                            style="padding-left: 25px;"
                          />
                          <button
                            aria-label="Collapse row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-expanded"
                            type="button"
                          />
                          1-3
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="Jim Green sr."
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="72"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="London No. 1 Lake Park"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              <span />
                               添加子项
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-up"
                                class="anticon anticon-arrow-up"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-down"
                                class="anticon anticon-arrow-down"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="delete"
                                class="anticon anticon-delete"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="delete"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-2"
                        data-row-key="0.items.2.items.0"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-2"
                            style="padding-left: 50px;"
                          />
                          <button
                            aria-label="Collapse row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-expanded"
                            type="button"
                          />
                          1-3-1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="Jim Green"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="42"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="London No. 2 Lake Park"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              <span />
                               添加子项
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-up"
                                class="anticon anticon-arrow-up"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-down"
                                class="anticon anticon-arrow-down"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="delete"
                                class="anticon anticon-delete"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="delete"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-3"
                        data-row-key="0.items.2.items.0.items.0"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-3"
                            style="padding-left: 75px;"
                          />
                          <button
                            aria-label="Collapse row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          1-3-1-1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="Jim Green jr."
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="25"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="London No. 3 Lake Park"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              <span />
                               添加子项
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-up"
                                class="anticon anticon-arrow-up"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-down"
                                class="anticon anticon-arrow-down"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="delete"
                                class="anticon anticon-delete"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="delete"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-3"
                        data-row-key="0.items.2.items.0.items.1"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-3"
                            style="padding-left: 75px;"
                          />
                          <button
                            aria-label="Collapse row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          1-3-1-2
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="Jimmy Green sr."
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="18"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="London No. 4 Lake Park"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              <span />
                               添加子项
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-up"
                                class="anticon anticon-arrow-up"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-down"
                                class="anticon anticon-arrow-down"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="delete"
                                class="anticon anticon-delete"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="delete"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left: 0px;"
                          />
                          <button
                            aria-label="Collapse row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          2
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="Joe Black"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="32"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-input-affix-wrapper"
                          >
                            <input
                              class="ant-input"
                              type="text"
                              value="Sidney No. 1 Lake Park"
                            />
                            <span
                              class="ant-input-suffix"
                            >
                              <span />
                            </span>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              <span />
                               添加子项
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-up"
                                class="anticon anticon-arrow-up"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-up"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="arrow-down"
                                class="anticon anticon-arrow-down"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="arrow-down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              <span
                                aria-label="delete"
                                class="anticon anticon-delete"
                                role="img"
                                style="font-size: 16px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="delete"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                  />
                                </svg>
                              </span>
                               
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-dashed ant-btn-round"
        style="display: block; width: 100%; margin-top: 10px;"
        type="button"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
          style="font-size: 12px;"
        >
          <svg
            aria-hidden="true"
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
        <span>
          添加
        </span>
      </button>
      <div>
        {"data":[{"name":"John Brown sr.","age":60,"address":"New York No. 1 Lake Park","items":[{"name":"John Brown","age":42,"address":"New York No. 2 Lake Park","_expanded":true},{"name":"John Brown jr.","age":30,"address":"New York No. 3 Lake Park","items":[{"name":"Jimmy Brown","age":16,"address":"New York No. 3 Lake Park","_expanded":true}],"_expanded":true},{"name":"Jim Green sr.","age":72,"address":"London No. 1 Lake Park","items":[{"name":"Jim Green","age":42,"address":"London No. 2 Lake Park","items":[{"name":"Jim Green jr.","age":25,"address":"London No. 3 Lake Park","_expanded":true},{"name":"Jimmy Green sr.","age":18,"address":"London No. 4 Lake Park","_expanded":true}],"_expanded":true}],"_expanded":true}],"_expanded":true},{"name":"Joe Black","age":32,"address":"Sidney No. 1 Lake Park","_expanded":true}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Selection 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        class="ant-table-selection-col"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <div
                            class="ant-table-selection"
                          >
                            <label
                              class="ant-checkbox-wrapper"
                            >
                              <span
                                class="ant-checkbox"
                              >
                                <input
                                  class="ant-checkbox-input"
                                  type="checkbox"
                                  value=""
                                />
                                <span
                                  class="ant-checkbox-inner"
                                />
                              </span>
                            </label>
                            <div
                              class="ant-table-selection-extra"
                            >
                              <span
                                class="ant-dropdown-trigger"
                              >
                                <span
                                  aria-label="down"
                                  class="anticon anticon-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                          </div>
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          地址
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left: 0px;"
                          />
                          <button
                            aria-label="Expand row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                          John Brown sr.
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          60
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          New York No. 1 Lake Park
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell ant-table-selection-column"
                        >
                          <label
                            class="ant-checkbox-wrapper"
                          >
                            <span
                              class="ant-checkbox"
                            >
                              <input
                                class="ant-checkbox-input"
                                type="checkbox"
                                value=""
                              />
                              <span
                                class="ant-checkbox-inner"
                              />
                            </span>
                          </label>
                        </td>
                        <td
                          class="ant-table-cell ant-table-cell-with-append"
                        >
                          <span
                            class="ant-table-row-indent indent-level-0"
                            style="padding-left: 0px;"
                          />
                          <button
                            aria-label="Expand row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-spaced"
                            type="button"
                          />
                          Joe Black
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          32
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          Sidney No. 1 Lake Park
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"name":"John Brown sr.","age":60,"address":"New York No. 1 Lake Park","items":[{"name":"John Brown","age":42,"address":"New York No. 2 Lake Park","_selected":false},{"name":"John Brown jr.","age":30,"address":"New York No. 3 Lake Park","items":[{"name":"Jimmy Brown","age":16,"address":"New York No. 3 Lake Park","_selected":false}],"_selected":false},{"name":"Jim Green sr.","age":72,"address":"London No. 1 Lake Park","items":[{"name":"Jim Green","age":42,"address":"London No. 2 Lake Park","items":[{"name":"Jim Green jr.","age":25,"address":"London No. 3 Lake Park","_selected":false},{"name":"Jimmy Green sr.","age":18,"address":"London No. 4 Lake Park","_selected":false}],"_selected":false}],"_selected":false}],"_expanded":false,"_selected":false},{"name":"Joe Black","age":32,"address":"Sidney No. 1 Lake Park","_expanded":false,"_selected":false}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;
